First draft of reimplemented list support using enumitem.sty (options are not yet implemented)
git-svn-id: https://svn.code.sf.net/p/writer2latex/code/trunk@386 f0f2a975-2e09-46c8-9428-3b39399b9f3c