@@ -2,7 +2,7 @@
  *
  *  ImageConverter.java
  *
- *  Copyright: 2002-2018 by Henrik Just
+ *  Copyright: 2002-2022 by Henrik Just
  *
  *  This file is part of Writer2LaTeX.
  *  
@@ -19,7 +19,7 @@
  *  You should have received a copy of the GNU General Public License
  *  along with Writer2LaTeX.  If not, see <http://www.gnu.org/licenses/>.
  * 
- *  Version 2.0 (2018-07-14)
+ *  Version 2.0 (2020-04-23)
  *
  */
 
@@ -33,7 +33,8 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 
-import javax.xml.bind.DatatypeConverter;
+//import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
@@ -250,7 +251,8 @@ public final class ImageConverter {
 	                }
 	            }
 	            //blob = Base64.decode(buf.toString());
-	            blob = DatatypeConverter.parseBase64Binary(buf.toString());
+	            //blob = DatatypeConverter.parseBase64Binary(buf.toString());
+	            blob = Base64.getDecoder().decode(buf.toString());
     			// We may have seen this image before, return the recycled version
 	            String sId1 = createId(blob);
     			if (recycledImages.containsKey(sId1)) {
@@ -342,8 +344,8 @@ public final class ImageConverter {
 			// This would be surprising
 			return null;
 		}
-    	return DatatypeConverter.printHexBinary(md.digest(blob))
-    			+DatatypeConverter.printHexBinary(Arrays.copyOf(blob, 10));
+    	return Base64.getEncoder().encodeToString(md.digest(blob))
+    			+Base64.getEncoder().encodeToString(Arrays.copyOf(blob, 10));
     }
-    
+        
 }
